# IR_lights_remote

./: README.md
FW/: CMakeLists.txt
FW/cmake/: ARMFunctions.cmake  ToolchainARMCortex.cmake
FW/lib/peripherals/: gpio.hpp  gpio_definitions.hpp  systick.hpp  watchdog.hpp
FW/src/: DS3231.hpp  Date_time.hpp  I2C.hpp  IR_transmitter.hpp  System.cpp  System.hpp  Timer.hpp  main.cpp
HW/: IR_lights.csv  IR_lights.kicad_pcb  IR_lights.kicad_prl  IR_lights.kicad_pro  IR_lights.kicad_sch  IR_lights.xls  IR_lights.xml  fp-info-cache
HW/bom/: ibom.html
HW/gerbs/: IR_lights-B_Cu.gbr  IR_lights-B_Mask.gbr  IR_lights-B_Paste.gbr  IR_lights-B_Silkscreen.gbr  IR_lights-Edge_Cuts.gbr  IR_lights-F_Cu.gbr  IR_lights-F_Mask.gbr  IR_lights-F_Paste.gbr  IR_lights-F_Silkscreen.gbr  IR_lights-NPTH.drl  IR_lights-PTH.drl  IR_lights-job.gbrjob
SW/IR_Receiver/: IR_Receiver.ino
SW/IR_Transmitter/IR_Transmitter/: IR_Transmitter.ino
